# federated-learning-client-selection

./: README.md  final_model.pt  plot_results.py  pyproject.toml  run_experiments.py
pytorchexample/: client_app.py  custom_strategy.py  metrics_tracker.py  server_app.py  task.py
